--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+Babel==1.3
 blinker==1.3
+coverage==3.7.1
 decorator==3.4.0
 Flask==0.10.1
+Flask-Babel==0.9
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
+flipflop==1.0
+guess-language==0.2
 gunicorn==19.1.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 pbr==0.10.7
 py-bcrypt==0.4
+pytz==2014.10
 six==1.8.0
+speaklater==1.3
 SQLAlchemy==0.9.8
 sqlalchemy-migrate==0.9.2
 sqlparse==0.1.14
