--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-WTF==0.10.3
 flipflop==1.0
 guess-language==0.2
 gunicorn==19.1.1
+psycopg2==2.5.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
