--- a/requirements.txt
+++ b/requirements.txt
@@ -5,22 +5,31 @@ decorator==3.4.0
 Flask==0.10.1
 Flask-Admin==1.0.9
 Flask-Babel==0.9
+Flask-Excel==0.0.3
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
+Flask-OAuthlib==0.9.2
 Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
 flipflop==1.0
 geopy==1.6.1
+google-api-python-client==1.2
 guess-language==0.2
 gunicorn==19.1.1
+httplib2==0.9
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+oauthlib==1.0.3
 pbr==0.10.7
 py-bcrypt==0.4
+pyexcel==0.1.7
+pyexcel-io==0.0.6
+pyexcel-webio==0.0.3
 pytz==2014.10
-requests==0.13.2
+requests==2.8.1
+requests-oauthlib==0.5.0
 six==1.8.0
 speaklater==1.3
 SQLAlchemy==0.9.8
@@ -28,13 +37,7 @@ sqlalchemy-migrate==0.9.2
 sqlparse==0.1.14
 stripe==1.19.1
 Tempita==0.5.2
-Werkzeug==0.9.6
-WTForms==2.0.1
-psycopg2==2.4.4
-Flask-Excel==0.0.3
-httplib2==0.9
-pyexcel==0.1.7
-pyexcel-io==0.0.6
-pyexcel-webio==0.0.3
 texttable==0.8.3
+Werkzeug==0.9.6
 wheel==0.24.0
+WTForms==2.0.1
