--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+altgraph==0.10.2
 Babel==1.3
+bdist-mpkg==0.5.0
 blinker==1.3
+bonjour-py==0.3
 coverage==3.7.1
 decorator==3.4.0
 Flask==0.10.1
 Flask-Admin==1.0.9
 Flask-Babel==0.9
 Flask-Excel==0.0.3
+Flask-HTTPAuth==2.7.0
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-OAuthlib==0.9.2
@@ -20,16 +24,22 @@ gunicorn==19.1.1
 httplib2==0.9
 itsdangerous==0.24
 Jinja2==2.7.3
+macholib==1.5.1
 MarkupSafe==0.23
+matplotlib==1.3.1
+modulegraph==0.10.4
+numpy==1.8.0rc1
 oauthlib==1.0.3
+passlib==1.6.5
 pbr==0.10.7
 py-bcrypt==0.4
-pyexcel==0.1.7
-pyexcel-io==0.0.6
-pyexcel-webio==0.0.3
+py2app==0.7.3
+pyparsing==2.0.1
+python-dateutil==1.5
 pytz==2014.10
 requests==2.8.1
 requests-oauthlib==0.5.0
+scipy==0.13.0b1
 six==1.8.0
 speaklater==1.3
 SQLAlchemy==0.9.8
@@ -38,6 +48,9 @@ sqlparse==0.1.14
 stripe==1.19.1
 Tempita==0.5.2
 texttable==0.8.3
+Twisted==13.2.0
 Werkzeug==0.9.6
 wheel==0.24.0
 WTForms==2.0.1
+xattr==0.6.4
+zope.interface==4.1.1
