--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-OAuthlib==0.9.2
 Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
+flask-cors==2.1.0
 flipflop==1.0
 geopy==1.6.1
 google-api-python-client==1.2
