--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
 flask-cors==2.1.0
+Flask-RESTful==0.3.4
+aniso8601==1.1.0
 flipflop==1.0
 geopy==1.6.1
 google-api-python-client==1.2
